--- a/DAL/DALBLL.csproj
+++ b/DAL/DALBLL.csproj
@@ -40,14 +40,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bill.cs" />
+    <Compile Include="BillInfo.cs" />
+    <Compile Include="BillInfoDB.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="ConnectDAL.cs" />
     <Compile Include="GetDataTableFood.cs" />
+    <Compile Include="GetUnCheckBillByIdTable.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="MenuDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="QLFOOD.cs">
+      <DependentUpon>QLFOOD.xsd</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="QLFOOD.Designer.cs">
       <AutoGen>True</AutoGen>
