--- a/DAL/Properties/Settings.settings
+++ b/DAL/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="QL_FOODConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=KHOA\SQLEXPRESS;Initial Catalog=QL_FOOD;User ID=sa;Password=sa2012&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=QL_FOOD;User ID=sa;Password=Qlk@123456&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=KHOA\SQLEXPRESS;Initial Catalog=QL_FOOD;User ID=sa;Password=sa2012</Value>
+      <Value Profile="(Default)">Data Source=.;Initial Catalog=QL_FOOD;User ID=sa;Password=Qlk@123456</Value>
     </Setting>
   </Settings>
 </SettingsFile>
