--- a/DAL/DALBLL.csproj
+++ b/DAL/DALBLL.csproj
@@ -42,8 +42,11 @@
     <Compile Include="Bill.cs" />
     <Compile Include="BillInfo.cs" />
     <Compile Include="BillInfoDB.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="CategoryDB.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="ConnectDAL.cs" />
+    <Compile Include="FoodDB.cs" />
     <Compile Include="GetDataTableFood.cs" />
     <Compile Include="GetUnCheckBillByIdTable.cs" />
     <Compile Include="Menu.cs" />
