--- a/DAL/DALBLL.csproj
+++ b/DAL/DALBLL.csproj
@@ -39,10 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="Bill.cs" />
+    <Compile Include="BillDB.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="ConnectDAL.cs" />
     <Compile Include="GetDataTableFood.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="MenuDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
